--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-﻿ uic ./ui/mainwindow.ui -o ./src/include/ui_mainwindow.h
+﻿uic ./ui/mainwindow.ui -o ./src/include/ui_mainwindow.h
 
- 快捷键复制，删除物体
- 右键完善，双击显示到物体
- 利用信号槽机制更新listWidget
+1.实现矩形，圆形光源
+2.实现材质混合（漫反射材质、法线材质）
+3.降噪
