--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 ﻿uic ./ui/mainwindow.ui -o ./src/include/ui_mainwindow.h
 
-1.brdf待实现,光源待实现,fps显示优化
+1.光源待实现,shader分拆
 2.切换页面
-3.降噪
+3.降噪,设置降噪帧数间隔
 
 ui方面：
 1.编辑器
