--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 ﻿uic ./ui/mainwindow.ui -o ./src/Ui/UiMainWindow.h
 uic ./ui/Inspector.ui -o ./src/Ui/UiInspector.h
 uic ./ui/InspectorPage.ui -o ./src/Ui/UiInspectorPage.h
+uic ./ui/TransformInspector.ui -o ./src/Ui/UiTransformInspector.h
 
 cloc src --exclude-list-file=ignore.txt
 
