光追渲染器 v1.0

--- a/todo.txt
+++ b/todo.txt
@@ -4,15 +4,11 @@ uic ./ui/InspectorPage.ui -o ./src/Ui/UiInspectorPage.h
 uic ./ui/RenderOptionInspector.ui -o ./src/Ui/UiRenderOptionInspector.h
 uic ./ui/TransformInspector.ui -o ./src/Ui/UiTransformInspector.h
 uic ./ui/MaterialInspector.ui -o ./src/Ui/UiMaterialInspector.h
+uic ./ui/HelpDialog.ui -o ./src/Ui/UiHelpDialog.h
+uic ./ui/SkyboxInspector.ui -o ./src/Ui/UiSkyboxInspector.h
 
 cloc src --exclude-list-file=ignore.txt
 
-1.完善ui提示，完善离屏渲染过程设置（鼠标等事件）
-2.完善设置等Ui
-
-
-ui方面：
-1.编辑器
-2.渲染选项
+增量更新
 
 
